--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -1,3 +1,9 @@
 .row-one {
-    background-color: yellow;
+    background-color: rgb(5, 2, 56);
+}
+.nav-buttons {
+    margin-right: 10px;
+}
+.toolbar {
+    height: 100%;
 }
