changed color background

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
             body {
                 width: 100vw;
                 height: 100vh;
-                background-color: #51F709;
+                background-color: #343a40;
             }
     
         
