--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table-dark">
     <thead class="thead-dark">
         <tr>
             <th scope="col">Condition X</th>
