--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,20 +1,19 @@
-<mat-toolbar color="accent" class="toolbar">
-  <mat-toolbar-row class="row-one">
-    <div class="row-one">
-      <div class="container-padding">
-        <span>r1c1</span>
+<div class="headerbar">
+    <div class="login">
+        <button type="button" class="btn btn-primary">Login</button>
       </div>
-      <div id="r1c2" class="container-padding">
-        <button (click)="navigateTo('')" class="nav-buttons" type="button" mat-raised-button color="primary">
-          Home
-        </button>
-        <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="warn">
-            Courses
-          </button>
-      </div>
-      <div class="container-padding">
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
-      </div>
+  <div class="container-padding">
+    <div class="inputtask">
+      <input type="text" placeholder="Enter in your task to do..."><br>
     </div>
-  </mat-toolbar-row>
-</mat-toolbar>
+    <div class="inputbutton">
+      <button type="button" class="btn btn-success btn-lg">Enter Task</button>
+    </div>
+  </div>
+  <div id="r1c2" class="container-padding">
+
+  </div>
+  <div class="container-padding">
+
+  </div>
+</div>
