--- a/src/styles.css
+++ b/src/styles.css
@@ -12,9 +12,9 @@
             body {
                 width: 100vw;
                 height: 100vh;
-                background-color: #343a40;
+                background-color: #ffffff;
             }
-    
+        
         
     
             .row-one,
@@ -27,9 +27,9 @@
             }
             .container-padding {
                 margin: 12px;
-                border: 1px dashed black;
+                border:black;
             }
- 
+
         
 
         .main-container {
@@ -40,10 +40,6 @@
 
    
 
-        .row-two {
-            background-color: #dd5e5e;
-            height: 100%;
-        }
         
 
 html, body { height: 100%; }
