--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -31,8 +31,7 @@
     top: 30%;
     right: 33%;
 }
-.login {
-    position: absolute;
-    top: 0%;
-    left: 0%;
+.nav-item {
+    left: 25%;
+    position: relative;
 }
