--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,11 @@ html, body {
     max-width: 100vw;
     overflow: hidden;
 }
+.box-shadow {
+    display: block;
+    -webkit-box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
+-moz-box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
+box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
+background-color: #320C90;
+color: white;
+}
