--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -11,7 +11,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Contacts <span class="sr-only">(current)</span></a>
+                <a class="nav-link" class="logout" href="#" (click)="logout()">Logout <span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
@@ -35,7 +35,7 @@
 </div>
 
 
-<ul *ngFor="let todo of todos; let i = index" class="list-group" id="myTask">
+<ul class="list-group" id="myTask">
         <li class="list-group-item">Cras justo odio</li>
         
-      </ul>
+</ul>
