--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -10,6 +10,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
+            <button (click)="navigateTo('schedulerpage')" class="nav-buttons" type="button" mat-raised-button color="accent">
+                Schedule
+            </button>
             <li class="nav-item active">
                 <a class="nav-link" class="logout" href="#" (click)="logout()">Logout <span class="sr-only">(current)</span></a>
             </li>
