--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+You can add global styles to this file, and also import other style files
+
+html, body {
+    height: 100vh;
+    width: 100vw;
+    max-height: 100vh;
+    max-width: 100vw;
+    overflow: hidden;
+}
+.box-shadow {
+    display: block;
+    -webkit-box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
+-moz-box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
+box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
+background-color: #320C90;
+color: white;
+}
