Integrated, CSS Broken

--- a/src/app/Scheduler/scheduler.component.html
+++ b/src/app/Scheduler/scheduler.component.html
@@ -7,6 +7,9 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!-- NOTE: If Scheduler is giving errors, run this: -->
+<!-- npm i @syncfusion/ej2-angular-schedule -->
+
 <style>
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
