--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,6 @@ box-shadow: 20px 25px 21px -4px rgba(0,0,0,0.75);
 background-color: #320C90;
 color: white;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
