--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,5 @@ background-color: #320C90;
 color: white;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* html, body { height: 100%; } */
+body { margin: 0px; font-family: Roboto, "Helvetica Neue", sans-serif; }
