--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -14,7 +14,8 @@
                 <a class="nav-link" href="app-scheduler">Scheduler <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" class="logout" href="#" (click)="logout()">Logout <span class="sr-only">(current)</span></a>
+                <a class="nav-link" class="logout" href="#" (click)="logout()">Logout <span
+                        class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
@@ -28,6 +29,9 @@
         <div class="inputbutton">
             <button type="button" (click)="addToDo(inputtask)" class="btn btn-success btn-lg">Enter Task</button>
         </div>
+        <div class="clearbutton">
+            <button type="button" class="btn btn-warning" (click)='clear()'>Clear All</button>
+        </div>
     </div>
     <div id="r1c2" class="container-padding">
 
@@ -38,9 +42,7 @@
 
 
 <ul class="list-group">
-        <li *ngFor="let todo of todos; let i = index" class="list-group-item" id="myTask">
-            todo.task <button type="button" class="btn btn-danger" (click)="delete()">X</button>
-        </li>
+    <li *ngFor="let todo of todos; let i = index" class="list-group-item" id="myTask">
+        {{todo.task}} <button type="button" class="btn btn-danger" (click)="delete()">X</button>
+    </li>
 </ul>
-
-
