tasks are now persistent

--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -32,6 +32,10 @@
         <div class="clearbutton">
             <button type="button" class="btn btn-warning" (click)='clear()'>Clear All</button>
         </div>
+        <div>
+            <button type="button" class="btn btn-primary contact-button" (click)="ngOnInit()">Save
+                All</button>
+        </div>
         
     </div>
     <div id="r1c2" class="container-padding">
