--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -33,10 +33,8 @@
             <button type="button" class="btn btn-warning" (click)='clear()'>Clear All</button>
         </div>
         <div>
-            <button type="button" class="btn btn-primary contact-button" (click)="ngOnInit()">Save
-                All</button>
+            <button type="button" class="btn btn-primary contact-button" (click)="ngOnInit()">Save All</button>
         </div>
-        
     </div>
     <div id="r1c2" class="container-padding">
 
@@ -47,7 +45,8 @@
 
 
 <ul class="list-group">
-    <li *ngFor="let todo of todos; let i = index" class="list-group-item shadow p-3 mb-5 bg-white rounded border border-dark rounded" id="myTask">
+    <li *ngFor="let todo of todos; let i = index"
+        class="list-group-item shadow p-3 mb-5 bg-white rounded border border-dark rounded" id="myTask">
         {{todo.task}} <button type="button" class="btn btn-danger" (click)="delete()">X</button>
         <button (click)=update()>Edit!</button>
         <select class="selectpicker">
