--- a/src/app/Scheduler/scheduler.component.html
+++ b/src/app/Scheduler/scheduler.component.html
@@ -1,3 +1,10 @@
+<style>
+.logout {
+    position: absolute;
+    right: 5%;
+    bottom: 30%;
+}
+</style>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
     <a class="navbar-brand" href="#">Team X-Port Overload</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
