--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-toast></app-toast>
 <router-outlet></router-outlet>
+<div class="app-main-grid">
+    <app-toast></app-toast>
+    <button class="btn btn-secondary" (click)="showToast()">Get Random Number</button>
+    </div>
