--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
-    <a class="navbar-brand" href="#">Team X-Port Overload</a>
+    <a class="navbar-brand">Team X-Port Overload</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -7,9 +7,6 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="app-scheduler">Scheduler <span class="sr-only">(current)</span></a>
             </li>
