--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -34,7 +34,7 @@
             <button class="btn btn-secondary" (click)="showToast()">Get Random Number</button>
             </div>
         <div class="inputbutton">
-            <button type="button" (click)="addToDo(inputtask)" class="btn btn-success btn-lg">Enter Task</button>
+            <button type="button" (click)="addToDo(inputtask)" class="new btn-success btn-lg">Enter Task</button>
         </div>
     </div>
     <div id="r1c2" class="container-padding">
