--- a/src/app/ToDo/todo.component.html
+++ b/src/app/ToDo/todo.component.html
@@ -31,7 +31,7 @@
         </div>
         <div class="app-main-grid">
             <app-toast></app-toast>
-            <button class="btn btn-secondary" (click)="showToast()">Get Random Number</button>
+            <button class="btn btn-secondary" (click)="showToast()">Get Random Task!</button>
             </div>
         <div class="inputbutton">
             <button type="button" (click)="addToDo(inputtask)" class="new btn-success btn-lg">Enter Task</button>
